--- a/packages/components/src/newComponents/Table/TableFooter/styles.css
+++ b/packages/components/src/newComponents/Table/TableFooter/styles.css
@@ -2,11 +2,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 0;
 
   height: 48px;
-  padding: 16px;
-  padding-bottom: 0;
+  padding-top: 16px;
   border-top: 1px solid var(--border);
 }
 
